--- a/.tmux.conf
+++ b/.tmux.conf
@@ -39,7 +39,7 @@ set-option -g mouse on
 set -sg escape-time 10
 
 # Enable color support inside of tmux.
-set -g default-terminal "tmux-256color"
+set -g default-terminal "screen-256color"
 
  # Use vi keys for copy mode
 set-window-option -g mode-keys vi
